# justapk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
justapk/: __init__.py  __main__.py  cli.py  downloader.py  models.py  utils.py  xapk.py
justapk/sources/: __init__.py  apk20.py  apkcombo.py  apkmirror.py  apkpure.py  base.py  fdroid.py  uptodown.py
