[project]
name = "justapk"
version = "0.1.1"
description = "Multi-source APK downloader with automatic fallback"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "TheQmaks"}]
keywords = ["apk", "android", "download", "apkpure", "apkmirror", "fdroid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "curl_cffi>=0.7",
    "lxml>=5.0",
]

[project.urls]
Homepage = "https://github.com/TheQmaks/justapk"
Repository = "https://github.com/TheQmaks/justapk"
Issues = "https://github.com/TheQmaks/justapk/issues"

[project.scripts]
justapk = "justapk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["justapk"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "justapk.sources.*"
disable_error_code = ["union-attr", "arg-type", "assignment"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
    "types-requests>=2.28",
    "types-beautifulsoup4>=4.12",
]
